@@ -42,6 +42,8 @@ openvswitch (1.9.0-1) unstable; urgency=low
         - Interface type "null".
         - Numeric values for reserved ports (see "ovs-ofctl" note above).
         - Tunnel Path MTU Discovery.
+    - The data in the RARP packets can now be matched in the same way as the
+      data in ARP packets.
 
  -- Open vSwitch team <dev@openvswitch.org>  Wed, 24 Oct 2012 16:10:39 -0700
 
