@@ -41,6 +41,8 @@ v1.9.0 - xx xxx xxxx
         - Interface type "null".
         - Numeric values for reserved ports (see "ovs-ofctl" note above).
         - Tunnel Path MTU Discovery.
+    - The data in the RARP packets can now be matched in the same way as the
+      data in ARP packets.
 
 
 v1.8.0 - xx xxx xxxx
